[gd_scene load_steps=18 format=3 uid="uid://bq3huk364skd3"]

[ext_resource type="Script" uid="uid://ckp4b53u6oy0k" path="res://control.gd" id="1_h2yge"]
[ext_resource type="Theme" uid="uid://2l817y2oek51" path="res://default_theme.tres" id="1_ycdy4"]
[ext_resource type="Script" uid="uid://3trabpx82cr7" path="res://NodeSearcher.gd" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dyps4os5j3yaa" path="res://script_text_editor.tscn" id="2_5vw27"]
[ext_resource type="Script" uid="uid://d1qk1n50dr25f" path="res://FileSystem.cs" id="2_272bh"]
[ext_resource type="Script" uid="uid://nhwo0h4xgufb" path="res://graph_edit.gd" id="3_lquwl"]
[ext_resource type="Script" uid="uid://de6c8hfl8c708" path="res://mod_designer_tab.gd" id="4_kek77"]
[ext_resource type="PackedScene" uid="uid://k0stwqou0g55" path="res://galaxy_map.tscn" id="5_7mycd"]
[ext_resource type="Script" uid="uid://b7xevgxnfeofo" path="res://xml_output_window.gd" id="8_2cqfq"]
[ext_resource type="PackedScene" uid="uid://dd3up6482irwd" path="res://database_viewer.tscn" id="9_4c57u"]
[ext_resource type="Script" uid="uid://e68ng38rll3p" path="res://xml_syntax_highlighter.gd" id="9_yaehf"]
[ext_resource type="PackedScene" uid="uid://cqxn8vs5hgvwv" path="res://x_4_database_manager.tscn" id="10_4c57u"]
[ext_resource type="Script" uid="uid://caam3fho242vp" path="res://XmlCodeEdit.cs" id="10_074og"]
[ext_resource type="Script" uid="uid://cth4gc53qwxa7" path="res://output_text.gd" id="11_cegan"]
[ext_resource type="Script" uid="uid://dykviru4ol6wx" path="res://NodeGenerator.cs" id="11_dg77c"]
[ext_resource type="PackedScene" uid="uid://cxlrmygm25tcy" path="res://nodes/base_node.tscn" id="12_ycdy4"]

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_82xsv"]
script = ExtResource("9_yaehf")
metadata/_custom_type_script = "uid://e68ng38rll3p"

[node name="Main" type="Control" node_paths=PackedStringArray("node_searcher", "context_menu", "graph_edit", "xml_editor", "xml_validation_timer", "script_designer", "galaxy_map_editor", "mod_explorer", "file_context_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ycdy4")
script = ExtResource("1_h2yge")
node_searcher = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher")
context_menu = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/ContextMenu")
graph_edit = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/GraphEdit")
xml_editor = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow")
xml_validation_timer = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/XMLValidationTimer")
path_to_unpacked_4x_directory = "F:\\SteamLibrary\\steamapps\\common\\X4 Foundations\\x4_unpacked"
script_designer_open = true
script_designer = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner")
galaxy_map_editor = NodePath("VBoxContainer/SplitContainer/ModDesignerTab/GalaxyMapDesigner")
script_editor = ExtResource("2_5vw27")
mod_explorer = NodePath("VBoxContainer/SplitContainer/FileSystemTab/FileSystem/ModExplorer")
file_context_menu = NodePath("VBoxContainer/SplitContainer/FileSystemTab/FileSystem/PopupMenu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MenuBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ModMenuButton" type="MenuButton" parent="VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Mod"
item_count = 5
popup/item_0/text = "New"
popup/item_0/id = 4
popup/item_1/text = "Open"
popup/item_1/id = 0
popup/item_2/text = "Save"
popup/item_2/id = 1
popup/item_3/text = "Save to"
popup/item_3/id = 3
popup/item_4/text = "Close"
popup/item_4/id = 2

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
text = "File"
item_count = 4
popup/item_0/text = "Open"
popup/item_0/id = 0
popup/item_1/text = "Close"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save As"
popup/item_3/id = 3

[node name="ScriptMenuButton" type="MenuButton" parent="VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Script"
item_count = 4
popup/item_0/text = "Open"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_2/text = "Save to"
popup/item_2/id = 3
popup/item_3/text = "Close"
popup/item_3/id = 2

[node name="GalaxyMenuButton" type="MenuButton" parent="VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Galaxy"
item_count = 4
popup/item_0/text = "Open"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_2/text = "Save to"
popup/item_2/id = 3
popup/item_3/text = "Close"
popup/item_3/id = 2

[node name="Button" type="Button" parent="VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Settings"
flat = true

[node name="SplitContainer" type="SplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileSystemTab" type="TabContainer" parent="VBoxContainer/SplitContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
current_tab = 0

[node name="FileSystem" type="VBoxContainer" parent="VBoxContainer/SplitContainer/FileSystemTab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SplitContainer/FileSystemTab/FileSystem"]
layout_mode = 2
placeholder_text = "Search"

[node name="PopupMenu" type="PopupMenu" parent="VBoxContainer/SplitContainer/FileSystemTab/FileSystem"]
oversampling_override = 1.0
size = Vector2i(108, 100)

[node name="ModExplorer" type="Tree" parent="VBoxContainer/SplitContainer/FileSystemTab/FileSystem" node_paths=PackedStringArray("ContextMenu")]
layout_mode = 2
size_flags_vertical = 3
select_mode = 2
script = ExtResource("2_272bh")
RootPath = "F:\\SteamLibrary\\steamapps\\common\\X4 Foundations\\extensions\\stella_x4"
ContextMenu = NodePath("../../../ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/ContextMenu")

[node name="ModDesignerTab" type="TabContainer" parent="VBoxContainer/SplitContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
script = ExtResource("4_kek77")

[node name="ScriptDesigner" type="Control" parent="VBoxContainer/SplitContainer/ModDesignerTab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SplitContainer" type="SplitContainer" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VisualScriptDesigner" type="Control" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Node Searcher" type="Popup" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
msaa_2d = 3
use_debanding = true
use_occlusion_culling = true
oversampling_override = 1.0
initial_position = 1
size = Vector2i(500, 500)
wrap_controls = false
content_scale_size = Vector2i(500, 500)

[node name="Control" type="Control" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher" node_paths=PackedStringArray("main_app", "window", "node_generator", "database_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_1bvp3")
main_app = NodePath("../../../../../../../..")
window = NodePath("..")
node_generator = NodePath("../../../../../../../../NodeGenerator")
database_manager = NodePath("../../../../../../../../X4DatabaseManager")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Search For Node"

[node name="ItemList" type="ItemList" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
auto_width = true
item_count = 19
item_0/text = "Debug Text"
item_1/text = "Cue"
item_2/text = "Event Happened"
item_3/text = "TEST"
item_4/text = "TEST"
item_5/text = "TEST"
item_6/text = "TEST"
item_7/text = "TEST"
item_8/text = "TEST"
item_9/text = "TEST"
item_10/text = "TEST"
item_11/text = "TEST"
item_12/text = "TEST"
item_13/text = "TEST"
item_14/text = "TEST"
item_15/text = "TEST"
item_16/text = "TEST"
item_17/text = "TEST"
item_18/text = "TEST"

[node name="ContextMenu" type="PopupMenu" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
oversampling_override = 1.0
size = Vector2i(181, 101)
item_count = 5
item_0/text = "Cue"
item_0/id = 0
item_1/id = 1
item_1/separator = true
item_2/text = "Check Value"
item_2/id = 2
item_3/id = 3
item_3/separator = true
item_4/text = "Debug Text"
item_4/id = 4

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_offset = Vector2(-3, -31)
script = ExtResource("3_lquwl")

[node name="Button" type="Button" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1865.0
offset_top = 12.0
offset_right = 1933.0
offset_bottom = 43.0
grow_horizontal = 0
text = "TO XML"

[node name="Button2" type="Button" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1845.0
offset_top = 59.0
offset_right = 1933.0
offset_bottom = 90.0
grow_horizontal = 0
text = "Show XML"

[node name="XMLValidationTimer" type="Timer" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner"]
wait_time = 0.5
one_shot = true

[node name="XMLOutputWindow" type="Control" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer" node_paths=PackedStringArray("output_text_edit", "xml_editor")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
script = ExtResource("8_2cqfq")
output_text_edit = NodePath("VBoxContainer/VSplitContainer/OutputText")
xml_editor = NodePath("VBoxContainer/VSplitContainer/XMLCodeEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="XMLCodeEdit" type="CodeEdit" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
placeholder_text = "xml"
editable = false
scroll_smooth = true
syntax_highlighter = SubResource("SyntaxHighlighter_82xsv")
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("10_074og")

[node name="OutputText" type="TextEdit" parent="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow/VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
editable = false
wrap_mode = 1
script = ExtResource("11_cegan")

[node name="GalaxyMapDesigner" type="Control" parent="VBoxContainer/SplitContainer/ModDesignerTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/SplitContainer/ModDesignerTab/GalaxyMapDesigner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SplitContainer/ModDesignerTab/GalaxyMapDesigner/SubViewportContainer"]
handle_input_locally = false
msaa_2d = 3
use_debanding = true
use_occlusion_culling = true
physics_object_picking = true
size = Vector2i(880, 573)
render_target_update_mode = 0

[node name="GalaxyMap" parent="VBoxContainer/SplitContainer/ModDesignerTab/GalaxyMapDesigner/SubViewportContainer/SubViewport" instance=ExtResource("5_7mycd")]
position = Vector2(272, 44)

[node name="DatabaseViewer" parent="VBoxContainer/SplitContainer/ModDesignerTab" instance=ExtResource("9_4c57u")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="X4DatabaseManager" parent="." instance=ExtResource("10_4c57u")]
FactionColors = Dictionary[String, Color]({
"antigone": Color(0.08627451, 0.53333336, 0.5254902, 1),
"antigone republic": Color(0.21568628, 0.6156863, 0.5882353, 1),
"argon": Color(0.11764706, 0.5647059, 1, 1),
"argon federation": Color(0.2627451, 0.26666668, 0.5137255, 1),
"buccaneers": Color(1, 0.64705884, 0, 1),
"court": Color(0.8627451, 0.078431375, 0.23529412, 1),
"fallensplit": Color(1, 0.54901963, 0, 1),
"freesplit": Color(1, 1, 0, 1),
"hatikvah": Color(0, 0.5019608, 0.5019608, 1),
"paranid": Color(0.4509804, 0.043137256, 0.23921569, 1),
"player": Color(0.29214033, 0.7298991, 0.29222915, 1),
"queendom of boron": Color(0.050980393, 0.48235294, 0.6392157, 1),
"scaleplate": Color(0.07058824, 0.09803922, 0.5176471, 1),
"split": Color(0.5019608, 0.5019608, 0, 1),
"teladi": Color(0.32941177, 0.56078434, 0.02745098, 1),
"terran protectorate": Color(0.07058824, 0.32156864, 0.50980395, 1),
"trinity": Color(1, 0.84313726, 0, 1),
"xenon": Color(0.54901963, 0.011764706, 0.015686275, 1),
"yaki": Color(0.58431375, 0.52156866, 0.03137255, 1)
})

[node name="NodeGenerator" type="Node" parent="." node_paths=PackedStringArray("DatabaseManager")]
script = ExtResource("11_dg77c")
DatabaseManager = NodePath("../X4DatabaseManager")
BaseNodeScene = ExtResource("12_ycdy4")

[connection signal="node_created" from="." to="." method="_on_node_created"]
[connection signal="node_destroyed" from="." to="." method="_on_node_destroyed"]
[connection signal="ContextActionRequested" from="VBoxContainer/SplitContainer/FileSystemTab/FileSystem/ModExplorer" to="." method="_on_mod_explorer_context_action_requested"]
[connection signal="button_clicked" from="VBoxContainer/SplitContainer/FileSystemTab/FileSystem/ModExplorer" to="." method="_on_mod_explorer_button_clicked"]
[connection signal="item_activated" from="VBoxContainer/SplitContainer/FileSystemTab/FileSystem/ModExplorer" to="." method="_on_mod_explorer_item_activated"]
[connection signal="tab_changed" from="VBoxContainer/SplitContainer/ModDesignerTab" to="." method="_on_mod_designer_tab_tab_changed"]
[connection signal="about_to_popup" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher" to="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Node Searcher/Control" method="_on_node_searcher_about_to_popup"]
[connection signal="id_pressed" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/ContextMenu" to="." method="_on_context_menu_id_pressed"]
[connection signal="connection_from_empty" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/GraphEdit" to="." method="_on_graph_edit_connection_from_empty"]
[connection signal="connection_request" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="connection_to_empty" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="end_node_move" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/GraphEdit" to="." method="_on_graph_edit_end_node_move"]
[connection signal="pressed" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/VisualScriptDesigner/XMLValidationTimer" to="." method="_on_timer_timeout"]
[connection signal="code_completion_requested" from="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow/VBoxContainer/VSplitContainer/XMLCodeEdit" to="VBoxContainer/SplitContainer/ModDesignerTab/ScriptDesigner/SplitContainer/XMLOutputWindow/VBoxContainer/VSplitContainer/XMLCodeEdit" method="_on_code_completion_requested"]
